# team-NeXTwo-2025

./: README.md
lynq/: README.md  package-lock.json  package.json
lynq/src/app/: globals.css  layout.tsx  page.tsx
lynq/src/app/api/agent/: route.ts
lynq/src/app/api/agent-output/: route.ts
lynq/src/app/api/user-data/: route.ts
lynq/src/app/components/: AgentInsights.tsx  NavBar.tsx
lynq/src/app/pages/HeroPage/: hero-section.tsx  three-scene.tsx
lynq/src/app/pages/HeroPage/components/: Hero.tsx  InfoCards.tsx  LockDesign.tsx
lynq/src/app/pages/HeroPage/ui/: trending-up-icon.tsx
lynq/src/app/pages/main/: Dashboard.tsx  Modal.tsx  page.tsx
lynq/src/app/pages/main/cards/: CardBudget.tsx  CardCashFlow.tsx  CardInsights.tsx  CardSavings.tsx
lynq/src/app/types/: user.ts
lynq/src/app/utils/: dataFormatters.ts
lynq/src/backend/qore/: README.md  api.py  pyproject.toml  report.md  requirements.txt
lynq/src/backend/qore/knowledge/: user.json  user2.json
lynq/src/backend/qore/qore/: crew.py  main.py
lynq/src/backend/qore/qore/config/: agents.yaml  tasks.yaml
